[package]
name = "lightspeed-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
time = { version = "0.3", features = ["macros"] }
futures = "0.3"

[dev-dependencies]
httpmock = "0.6"
